--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "primereact": "^10.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
