--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "primereact": "^10.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-google-charts": "^5.2.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.2",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
