--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-google-charts": "^5.2.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
+    "react-stacked-toast": "^1.1.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
